# AiR-Notes_server

./: .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  README.md  db.sqlite3  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy_to_ghcr.yml
AiR_Notes_server/: api.py  api_auth.py  asgi.py  settings.py  urls.py  wsgi.py
docker/: Dockerfile  Dockerfile.dev  compose.dev.yaml  compose.prod.yaml  docker-entrypoint.sh
notes/: admin.py  api.py  consumers.py  models.py  routing.py  urls.py  views.py
notes/migrations/: 0001_initial.py  0002_alter_qrcode_share_status.py
notes/static/a-frame/: components.js
notes/templates/notes/: qrcode_landing.html  voice_dev.html
templates/admin/: login.html
users/: api.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
