[project]
name = "air-notes-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django==5.2.*",
    "django-environ>=0.13.0",
    "gunicorn>=25.0.3",
    "mysqlclient>=2.2.8",
    "requests>=2.32.5",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.21.0",
    "django-stubs[compatible-mypy]>=6.0.5",
    "django-watchfiles>=1.4.0",
    "djlint>=1.36.4",
    "honcho>=2.0.0",
    "mypy>=1.19.1",
    "prek>=0.3.4",
    "ruff>=0.15.2",
]
