# ==== mypy ====
[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "paingouin.settings"

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = false
format_css = true
format_js = true
ignore="H030,H031,H021"
indent=2
max_line_length = 120
profile = "django"
custom_html="mjml,mj-\\w+,a-\\w+"
custom_blocks="component"
extend_exclude=""

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2
templating = "django"

# ==== ruff ====
[tool.ruff]
# Exclude a variety of commonly ignored directories.
extend-exclude = [
    "*/migrations/*.py",
    "staticfiles/*",
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "YTT",
    # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
    "ASYNC",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "DJ",
    "EM",
    "EXE",
    "FA",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TC",
    "INT",
    # "ARG", # Unused function argument
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    # "NPY",
    # "AIR",
    "PERF",
    # "FURB",
    # "LOG",
    "RUF",
]
ignore = [
    "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/#formatter-compatibility
]

[tool.ruff.lint.pycodestyle]
max-line-length = 120


[project]
name = "air-notes-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "channels[daphne]>=4.3.2",
    "django==5.2.*",
    "django-environ>=0.14.0",
    "django-ninja>=1.6.2",
    "gunicorn>=25.0.3",
    "mysqlclient>=2.2.8",
    "pillow>=12.2.0",
    "qrcode[pil]>=8.2",
    "requests>=2.32.5",
    "websockets>=16.0",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.21.0",
    "django-stubs[compatible-mypy]>=6.0.6",
    "django-watchfiles>=1.4.0",
    "djlint>=1.39.4",
    "honcho>=2.0.0",
    "mypy>=1.19.1",
    "prek>=0.4.5",
    "ruff>=0.15.19",
]
